style: fixed icon alignment

--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ input[type="date"] {
 .icon {
   position: absolute;
   right: 1.5rem;
-  bottom: 35px;
+  bottom: 34px;
   display: none;
 }
 
